Thu Feb  6 16:45:34 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* constants.sh: Replaced gnatk8 by gnatkr.

Wed Feb  5 18:58:18 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-gartcp.adb: Removed every ATC in the TCP module by using 4
	  characters operation codes which will unblock all the peers if
	  needed after shutdown synchronization.

Tue Feb  4 14:56:48 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-gartcp.adb: Commented out an ATC which makes everything
	  block. Without this ATC, termination may fail in some peculiar
	  cases (see comment in file, prefixed with 'XXXXX').

Mon Feb  3 20:20:56 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-parint.ads: Removed the kludge about Unit_Name. Since we are
	  not close yet to work with 3.09, it is not necessary. If we
	  decide to make a release which works with 3.09, then this kludge
	  will be added again.

Wed Jan 29 19:52:13 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-parint.ads: Minor reformating.

Tue Jan 28 16:18:41 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* ChangeLog: Removed spurious blank line introduced by the last
	  check-in !

	* s-parint.ads: Change '???' into 'XXXXX' which is our way of
	  indicating portions of code that are either not quite perfect or
	  likely to be modified in the future (workaround for
	  example). Also capitalize the explanation, to be style
	  conformant.

Tue Jan 28 16:11:53 1997  Laurent Pautet <pautet@inf.enst.fr>

	* s-parint.ads: Change Unit_Name_Access definition in order to
	workaround a bug in GNAT 3.09.

Wed Jan 22 17:32:39 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* constants.sh: Use the current build directory instead of /tmp as
	a temporary dir to prevent blow up due to /tmp being full (shit
	happens!).

Tue Jan 14 18:34:50 1997  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* s-parint.adb: Get rid of Htable (overkilling).

Tue Jan 14 10:06:14 1997  Laurent Pautet  <pautet@inf.enst.fr>

	* s-garhea.adb: Barrier -> Barrier_Type in Garlic.Utils.
