@@ -1,3 +1,8 @@
+Thu Feb  6 17:51:34 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>
+
+	* s-parint.adb: More comments. Suppress
+ 	Public_Receiver_Is_Installed because never used.
+
 Thu Feb  6 16:45:34 1997  Samuel Tardieu  <sam@inf.enst.fr>
 
 	* constants.sh: Replaced gnatk8 by gnatkr.
